# wundernut-vol2

./: README.md
Ari_Paasonen/: core.clj
Juho_Kahala/: muhkeimmat.rs
Sami_Hangaslammi/: WordPairs.hs
Tatu_Kilappa/: .gitignore  CMakeLists.txt  LICENSE  autogen.sh  defaults.cmake
Tatu_Kilappa/src/: main.cpp  muhkeuttaja.cpp  muhkeuttaja.hpp
Tuomo_Siren/: muhkeimmat_sanaparit.py
examples/: readme.md
examples/haskell/: .gitignore  LICENSE  MuhkeinSanapari.cabal  MuhkeinSanapariHaskell.prof  build-haskell.sh  build-with-profiling-haskell.sh  cabal.sandbox.config
examples/haskell/src/: Main.hs
examples/kirjainsanapari-java8-streams/: readme.md
examples/kirjainsanapari-java8-streams/resources/test/: ideavirke.txt  ruoka-ainevirke.txt  words_repeating.txt
examples/kirjainsanapari-java8-streams/src/main/kirjainsanapari/: CombinationPairResult.java  UniqueLetterFinder.java  WordPairResult.java
examples/kirjainsanapari-java8-streams/src/test/kirjainsanapari/: UniqueLetterFinderTest.java  UniqueLetterWordPairFinderTest.java
examples/puzzle_word_pairs_distinct_chars/: README.md  build.sbt
examples/scala-semi-brute-force/: .gitignore  build.sbt  readme.md
examples/scala-semi-brute-force/src/main/scala/wunderdog/: WordCombo.scala
examples/src/fi/wunderdog/puzzle/: WordPairsCalculator.scala
examples/src/main/kirjainsanapari/: UniqueLetterWordPairFinder.java
examples/src/main/scala/wunderdog/: WordCombo.scala
examples/src/test/resources/: test_data.txt
examples/src/test/scala/wunderdog/: WordComboSpec.scala
(+1 files in other folders)
